--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <h1>智能合约开发</h1>
-                    <div class="h2-banner">以太坊，超级账本和EOS的智能合约审核和开发</div>
+                    <div class="h2-banner">以太坊，超级账本和EOS智能合约的审核和开发</div>
                     <div class="text">
                         <div>
                             <div></div>
@@ -57,193 +57,51 @@
             <div class="industry-is-covered-content sc-content">
                 <h2>企业智能合约</h2>
                 <div class="h4 gor-100">
-                    <p>智能合约是编码为计算机协议的虚拟协议。包括两个协议持有人在内的任何一方都不能更改它们。为了进行修改，必须更改整个网络。</p>
-                    <p>智能合约的自执行特性使它们成为跨多个业务领域的各种应用程序的强大工具。OpenLedger的专家团队致力于使用以太坊，Hyperledger和基于EOS的智能合约为现有行业问题开发基于智能合约的解决方案。
+                    <p>任何一方，包括两个协议持有人，都不能改变智能合约的内容。必须更改整个网络，才有可能被修改。</p>
+                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域程序的强大工具。OpenLedger的专家团队致力于基于以太坊，超级账本和EOS的智能合约为现有行业所面临的问题提供基于智能合约的解决方案。
                     </p>
                 </div>
                 <div class="industry-is-covered-list sc-list">
                     <div class="row">
+                        <% for(var business of SmartContractsForBusinesses) {%>
                         <div class="col-md-4">
                             <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC1.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC1@2x.png 2x"
-                                        alt="Healthcare"></div>
-                                <h3>卫生保健</h3>
-                                <div class="text">
-                                    <p>
-                                        <p>智能合约用于个人医疗记录，医院与医疗中心之间的数据共享以及一般医疗管理。这可以包括监督药品，法规遵从性，测试结果和医疗保健供应管理。<a
-                                                class="teal-link" href="/solutions/blockchain-healthcare/">了解更多</a></p>
-                                    </p>
+                                <div class="covered-point-img sc-point-img">
+                                    <img src="<%= business.imgSrc %>" srcset="<%= business.imgSrcSet %>"
+                                        alt="<%= business.title %>">
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC2.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC2@2x.png 2x"
-                                        alt="Logistics"></div>
-                                <h3>后勤</h3>
+                                <h3><%= business.title %></h3>
                                 <div class="text">
                                     <p>
-                                        <p>智能合约使运输和物流企业能够以粒度方式跟踪从制造商到商店的产品流，简化了跟踪过程，并在整个供应链中提供了实时可见性。
-                                            <a class="teal-link" href="/solutions/blockchain-logistics/">了解更多</a>
+                                        <p><%= business.description %>
+                                            <a class="teal-link" href="<%= business.moreLink %>">了解更多</a>
                                         </p>
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC3.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC3@2x.png 2x"
-                                        alt="Real estate"></div>
-                                <h3>房地产</h3>
-                                <div class="text">
-                                    <p>
-                                        <p>智能合约可简化房地产行业中主要房地产交易领域（例如租赁，购买和销售）的管理操作。该技术减轻了文书工作的负担和财务成本。
-                                            <a class="teal-link" href="/solutions/blockchain-real-estate/">了解更多</a>
-                                        </p>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC4.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC4@2x.png 2x"
-                                        alt="Automotive"></div>
-                                <h3>汽车行业</h3>
-                                <div class="text">
-                                    <p>
-                                        <p>在汽车工业中，智能合约用于保险程序。合同是个性化的，包括真实的车辆性能信息。他们还自动执行保险金的收取和保险索赔后的赔付。</p>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC5.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC5@2x.png 2x"
-                                        alt="Insurance"></div>
-                                <h3>保险</h3>
-                                <div class="text">
-                                    <p>
-                                        <p>智能合约可以帮助保险业务自动化保单。他们可以根据智能合约中存储的索赔信息执行错误检查，路由和支出计算，并自动进行支出。</p>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="point">
-                                <div class="covered-point-img sc-point-img"><img
-                                        src="https://openledger.info/wp-content/uploads/2019/02/SC6.png"
-                                        srcset="https://openledger.info/wp-content/uploads/2019/02/SC6@2x.png 2x"
-                                        alt="Finance"></div>
-                                <h3>金融</h3>
-                                <div class="text">
-                                    <p>
-                                        <p>金融机构应用以太坊智能合约，利用该技术来改善数据质量，加强投资者保护并增强金融市场的功能。</p>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        <% } %>
                     </div>
                 </div>
                 <div class="slider-smart-contracts">
+                    <% for(var business2 of SmartContractsForBusinesses) { %>
                     <div class="smart-contracts-slide">
                         <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC1.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC1@2x.png 2x"
-                                    alt="Healthcare"></div>
-                            <h3>卫生保健</h3>
-                            <div class="text">
-                                <p>
-                                    <p>智能合约用于个人医疗记录，医院与医疗中心之间的数据共享以及一般医疗管理。这可以包括监督药品，法规遵从性，测试结果和医疗保健供应管理。<a
-                                            class="teal-link" href="/solutions/blockchain-healthcare/">了解更多</a></p>
-                                </p>
+                            <div class="covered-point-img sc-point-img">
+                                <img src="<%= business2.imgSrc %>" srcset="<%= business2.imgSrcSet %>"
+                                    alt="<%= business2.title %>">
                             </div>
-                        </div>
-                    </div>
-                    <div class="smart-contracts-slide">
-                        <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC2.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC2@2x.png 2x"
-                                    alt="Logistics"></div>
-                            <h3>后勤</h3>
+                            <h3><%= business2.title %></h3>
                             <div class="text">
                                 <p>
-                                    <p>智能合约使运输和物流企业能够以粒度方式跟踪从制造商到商店的产品流，简化了跟踪过程，并在整个供应链中提供了实时可见性。
-                                        <a class="teal-link" href="/solutions/blockchain-logistics/">了解更多</a>
+                                    <p><%= business2.description %>
+                                        <a class="teal-link" href="<%= business2.moreLink %>">了解更多</a>
                                     </p>
                                 </p>
                             </div>
                         </div>
                     </div>
-                    <div class="smart-contracts-slide">
-                        <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC3.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC3@2x.png 2x"
-                                    alt="Real estate"></div>
-                            <h3>房地产</h3>
-                            <div class="text">
-                                <p>
-                                    <p>智能合约可简化房地产行业中主要房地产交易领域（例如租赁，购买和销售）的管理操作。该技术减轻了文书工作的负担和财务成本。
-                                        <a class="teal-link" href="/solutions/blockchain-real-estate/">了解更多</a>
-                                    </p>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="smart-contracts-slide">
-                        <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC4.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC4@2x.png 2x"
-                                    alt="Automotive"></div>
-                            <h3>汽车行业</h3>
-                            <div class="text">
-                                <p>
-                                    <p>在汽车工业中，智能合约用于保险程序。合同是个性化的，包括真实的车辆性能信息。他们还自动执行保险金的收取和保险索赔后的赔付。</p>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="smart-contracts-slide">
-                        <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC5.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC5@2x.png 2x"
-                                    alt="Insurance"></div>
-                            <h3>保险</h3>
-                            <div class="text">
-                                <p>
-                                    <p>智能合约可以帮助保险业务自动化保单。他们可以根据智能合约中存储的索赔信息执行错误检查，路由和支出计算，并自动进行支出。</p>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="smart-contracts-slide">
-                        <div class="point">
-                            <div class="covered-point-img sc-point-img"><img
-                                    src="https://openledger.info/wp-content/uploads/2019/02/SC6.png"
-                                    srcset="https://openledger.info/wp-content/uploads/2019/02/SC6@2x.png 2x"
-                                    alt="Finance"></div>
-                            <h3>金融</h3>
-                            <div class="text">
-                                <p>
-                                    <p>金融机构应用以太坊智能合约，利用该技术来改善数据质量，加强投资者保护并增强金融市场的功能。</p>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    <%}%>
                 </div>
             </div>
         </div>
@@ -269,7 +127,7 @@
             <div class="container">
                 <h2 class="mt-40">为什么您的企业需要智能合约开发服务？</h2>
                 <div class="gor-100">
-                    <div class="h4">执行您的经营理念，并通过智能合约享受多项优势。</div>
+                    <div class="h4">如果您需要执行和贯彻您的企业经营理念，智能合约可以为您的企业带来如下便利。</div>
                 </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
@@ -278,7 +136,7 @@
                             <div class="point point-accordion">
                                 <h3>自治</h3>
                                 <div class="text">
-                                    <p>无需第三方参与，消除了对中间商的需求并提高了业务流程的效率。</p>
+                                    <p>不需要中介参与，去掉了中间商节约了成本并且提高了业务流程的效率。</p>
                                 </div>
                             </div>
                         </div>
@@ -287,7 +145,7 @@
                             <div class="point point-accordion">
                                 <h3>信任</h3>
                                 <div class="text">
-                                    <p>透明的智能合约技术可确保企业及其客户交易和协议是可验证的。</p>
+                                    <p>智能合约都是公开且透明的，可以确保企业和客户之间的交易或是达成的某种协议是可被验证的。</p>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +154,7 @@
                             <div class="point point-accordion">
                                 <h3>节省资金</h3>
                                 <div class="text">
-                                    <p>基于智能合约的自动化操作消除了人为处理和人为错误，从而降低了风险和成本。</p>
+                                    <p>基于智能合约的自动化操作减少了人工的处理，并且预防了误操作，从而降低了风险和成本。</p>
                                 </div>
                             </div>
                         </div>
@@ -377,7 +235,8 @@
                                 <div class="text">
                                     <div class="new-list-wrap">
                                         <div class="new-list-col-4">
-                                            <p>Hyperledger上的区块链智能合约开发具有多个优势。无论是在金融，医疗保健，零售，汽车还是其他行业，OpenLedger的团队都具有丰富的知识来支持您的需求并提供您业务所需的解决方案。</p>
+                                            <p>Hyperledger上的区块链智能合约开发具有多个优势。无论是在金融，医疗保健，零售，汽车还是其他行业，OpenLedger的团队都具有丰富的知识来支持您的需求并提供您业务所需的解决方案。
+                                            </p>
                                         </div>
                                         <div class="new-list-col-8">
                                             <div class="new-list">
@@ -460,7 +319,8 @@
             <div class="container">
                 <div class="sc-audit-content">
                     <h2>OpenLedger的智能合约审核</h2>
-                    <div class="h4 gor-100">部署智能合约时，安全漏洞，错误和效率低下会给您造成很大的损失。OpenLedger经验丰富的团队可帮助公司优化智能合约代码并从头开始实施智能合约安全审核。</div>
+                    <div class="h4 gor-100">
+                        部署智能合约时，安全漏洞，错误和效率低下会给您造成很大的损失。OpenLedger经验丰富的团队可帮助公司优化智能合约代码并从头开始实施智能合约安全审核。</div>
                     <div class="gor-100">
                         <div class="row advisory-icons sc-icons">
 
@@ -546,7 +406,7 @@
     <!-- Content End -->
     <!-- Common Footer -->
     <% include ../common/footer.ejs %>
-    <!-- Common Footer End -->
+                    <!-- Common Footer End -->
 </body>
 
 </html>
